@@ -410,6 +410,128 @@ an XS layer on top of the very fast gmplib library. See https://gmplib.org/
 
 Math::BigInt::GMPz inherits from Math::BigInt::Lib.
 
+=head METHODS
+
+The following methods are implemented.
+
+=over
+
+=item _new()
+
+=item _zero()
+
+=item _one()
+
+=item _two()
+
+=item _ten()
+
+=item _from_bin()
+
+=item _from_oct()
+
+=item _from_hex()
+
+=item _from_bytes()
+
+=item _from_base()
+
+=item _1ex()
+
+=item _add()
+
+=item _mul()
+
+=item _div()
+
+=item _sub()
+
+=item _dec()
+
+=item _inc()
+
+=item _mod()
+
+=item _sqrt()
+
+=item _root()
+
+=item _fac()
+
+=item _dfac()
+
+=item _pow()
+
+=item _modinv()
+
+=item _modpow()
+
+=item _rsft()
+
+=item _lsft()
+
+=item _gcd()
+
+=item _lcm()
+
+=item _and()
+
+=item _or()
+
+=item _xor()
+
+=item _is_zero()
+
+=item _is_one()
+
+=item _is_two()
+
+=item _is_ten()
+
+=item _is_even()
+
+=item _is_odd()
+
+=item _acmp()
+
+=item _str()
+
+=item _as_bin()
+
+=item _as_oct()
+
+=item _as_hex()
+
+=item _to_bin()
+
+=item _to_oct()
+
+=item _to_hex()
+
+=item _to_bytes()
+
+=item _to_base()
+
+=item _num()
+
+=item _copy()
+
+=item _len()
+
+=item _zeros()
+
+=item _digit()
+
+=item _check()
+
+=item _nok()
+
+=item _alen()
+
+=item _set()
+
+=back
+
 =head1 BUGS
 
 Please report any bugs or feature requests to
